add overfitting play save model

--- a/Py/fashion overfitting play.ipynb
+++ b/Py/fashion overfitting play.ipynb
@@ -1835,6 +1835,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(\"fasion.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model(\"fasion.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.6108358e-07, 3.9226737e-09, 2.8269807e-07, ..., 3.5702391e-04,\n",
+       "        2.6382634e-06, 9.9944192e-01],\n",
+       "       [2.5801862e-06, 4.1935225e-10, 9.9961299e-01, ..., 8.1527398e-12,\n",
+       "        1.9281256e-10, 3.1283344e-12],\n",
+       "       [7.3630829e-08, 9.9999988e-01, 3.1130518e-10, ..., 1.7667301e-10,\n",
+       "        7.5132550e-10, 2.5073470e-12],\n",
+       "       ...,\n",
+       "       [1.5304744e-04, 3.5774459e-08, 4.2084717e-05, ..., 2.3654700e-06,\n",
+       "        9.9973565e-01, 8.3821766e-10],\n",
+       "       [1.0613971e-06, 9.9998736e-01, 1.7902522e-07, ..., 2.0002537e-08,\n",
+       "        3.1761527e-08, 9.8088684e-09],\n",
+       "       [8.7832825e-07, 1.8068874e-07, 1.8513875e-06, ..., 1.4320872e-03,\n",
+       "        8.0179307e-06, 6.6725347e-06]], dtype=float32)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
